nginx_lb.tf
# Load Balancer
resource "aws_lb" "nginx_alb" {
  name               = "NginxALB"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [data.aws_security_group.nginx_sg.id]
  subnets            = [data.aws_subnet.public_subnet_1.id, data.aws_subnet.public_subnet_2.id]
  ip_address_type    = "ipv4"
}

# Target Group
resource "aws_lb_target_group" "nginxtg" {
  name        = "nginxtg"
  port        = 80
  protocol    = "HTTP"
  vpc_id      = data.aws_vpc.lab_vpc.id
  target_type = "instance"
}

# Load Balancer Listener
resource "aws_lb_listener" "nginx_listener" {
  load_balancer_arn = aws_lb.nginx_alb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.nginxtg.arn
  }
}

# Launch Template
resource "aws_launch_template" "nginxlt" {
  name                   = "nginxlt"
  description            = "Launch template for nginx"
  image_id               = "ami-061dd8b45bc7deb3d" # Replace with actual Amazon Linux 2 AMI ID
  instance_type          = "t3.micro"
  key_name               = "vockey"
  vpc_security_group_ids = [data.aws_security_group.nginx_sg.id]

  tag_specifications {
    resource_type = "instance"
    tags = {
      Name = "nginx-instance"
    }
  }
}

# Auto Scaling Group
resource "aws_autoscaling_group" "nginxasg" {
  desired_capacity     = 2
  min_size             = 2
  max_size             = 4
  vpc_zone_identifier  = [data.aws_subnet.public_subnet_1.id, data.aws_subnet.public_subnet_2.id]
  launch_template {
    id      = aws_launch_template.nginxlt.id
    version = "$Latest"
  }
  target_group_arns = [aws_lb_target_group.nginxtg.arn]

}

# Auto Scaling Policy
resource "aws_autoscaling_policy" "target_tracking_policy" {
  name                   = "TargetTrackingPolicy"
  autoscaling_group_name = aws_autoscaling_group.nginxasg.name
  policy_type            = "TargetTrackingScaling"

  target_tracking_configuration {
    predefined_metric_specification {
      predefined_metric_type = "ASGAverageCPUUtilization"
    }
    target_value = 90.0
  }
}
